example-database-eficode-gcp/base/frontend/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  template:
    spec:
      containers:
        - image: ghcr.io/eficode-academy/flask-quotes-frontend:release
          name: quotes-flask-frontend
          ports:
            - containerPort: 5000
          resources: {}
