example-database-eficode-gcp/base/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dummy.dagandersen.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: svc
              port:
                number: 5000
